--- a/templates/domain.yml
+++ b/templates/domain.yml
@@ -89,10 +89,12 @@ slots:
   Switzerland:
     type: text
     influence_conversation: false
+  
 
 actions:
   - action_query_knowledge_base
   - action_spelling_check
+  - action_spelling_correction
 
 responses:
   utter_greet:
@@ -101,6 +103,9 @@ responses:
   - text: "Clementine -> Hi!"
   - text: "Clementine -> Hello!"
   - text: "Clementine -> Hey!"
+  - text: "Clementine -> I know, rigth?"
+  - text: "Clementine -> Awesome."
+  - text: "Clementine -> Yeah, I know, I am awesome."
 
   utter_cheer_up:
   - text: "Clementine -> Here is something to cheer you up:"
@@ -300,14 +305,10 @@ responses:
   - text: "Clementine -> I'm happy to help."
 
   utter_ask_whatspossible:
-  - text: "Clementine -> Can ask me about:\n\n- How I was built.\n- How old I am.\n- What time is it.\n- The weather.
-    \n- We can disscuss about how do you feel.\n- I can give you some recommendations for activities to do.
-    \n- I know some jokes too XD.\n And finally, ask me questions about universities in the world! 
-    To start, ask me something like that: 'tell me more about universities in France' or 'what universities are in New York, USA'. 
-    Then, I can give you information about: 
-    \n\t city \n\t careers \n\t link \n\t ranking \n\t scholarship \n\t cost
-    Some examples: 'What is the costs to study in Universidad Autonoma de Madrid' or just 'Give me the careers of the last one' \n Give it a try! :D !!"
-  
+  - text: "Clementine -> You can ask me about:\n\n- How I was built.\n- How old I am.\n- What time is it.\n- The weather.
+  \n- We can disscuss about how do you feel.\n- I can give you some recommendations for activities to do.
+  \n- I have information about scholarships in universities. \n- I know some jokes too XD.\n"
+
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: false
