--- a/data/stories.yml
+++ b/data/stories.yml
@@ -6,6 +6,7 @@ stories:
   steps:
   - intent: greet
   - action: utter_greet
+  - action: utter_ask_whatspossible
   - intent: mood_great
   - action: utter_happy
 
@@ -13,6 +14,7 @@ stories:
   steps:
   - intent: greet
   - action: utter_greet
+  - action: utter_ask_whatspossible
   - intent: mood_unhappy
   - action: utter_cheer_up
   - action: utter_did_that_help
@@ -23,6 +25,7 @@ stories:
   steps:
   - intent: greet
   - action: utter_greet
+  - action: utter_ask_whatspossible
   - intent: mood_unhappy
   - action: utter_cheer_up
   - action: utter_did_that_help
@@ -151,6 +154,7 @@ stories:
   steps:
   - intent: greet
   - action: utter_greet
+  - action: utter_ask_whatspossible
   - checkpoint: check_greet
 
 - story: thanks
